some more cleanup add editor config file and remove dublicate translation files

--- a/language/en-GB/en-GB.plg_system_customcss.sys.ini
+++ b/language/en-GB/en-GB.plg_system_customcss.sys.ini
@@ -4,4 +4,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_SYSTEM_CUSTOMCSS="System - Add a custom.css"
-PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="This plugin checks whether a custom.css (or custom.min.css) file exists at /templates/"templatename"/css or /administrator/templates/"templatename"/css.  If present, it will added to the header. <br>With a custom.css you can overwrite the template css files.<br>This file will not be touched by an eventual update."
+PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="This plugin checks whether a custom.css (or custom.min.css) file exists at /templates/"templatename"/css or /administrator/templates/"templatename"/css. If present, it will added to the header.<br>With a custom.css you can overwrite the template css files.<br>This file will not be touched by an eventual update.<br>To use the plugin please activate it. Control Pannel --> Extensions --> Plugins --> System - Template custom.css."
