update language headers

--- a/language/de-DE/de-DE.plg_system_customcss.sys.ini
+++ b/language/de-DE/de-DE.plg_system_customcss.sys.ini
@@ -1,7 +1,6 @@
-; Joomla Template custom.css (JCCSS)
-; Copyright (C) 2013 - 2015 Tobias Zulauf (jah-tz.de). All rights reserved.
-; License GNU General Public License, http://www.gnu.org/copyleft/gpl.html
-; Note : All ini files need to be saved as UTF-8
+; Custom CSS Plugin
+; Copyright (C) 2013 - 2020 Tobias Zulauf (jah-tz.de). All rights reserved.
+; License GNU General Public License, https://www.gnu.org/copyleft/gpl.html
 
 PLG_SYSTEM_CUSTOMCSS="System - Template custom.css"
 PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="<strong>Plugin: System - Template custom.css</strong><br>Dieses Plugin prüft ob eine custom.css (oder custom.min.css) Datei hier /templates/"templatename"/css oder hier /administrator/templates/"templatename"/css vorhanden ist. Sollte es eine geben wird diese nach allen anderen CSS Dateien geladen. <br>Mit einer custom.css können alle im Template definierten CSS Klassen überschreiben werden.<br>iese Datei wird bei einem Update nicht verändert.<br>Um das Plugin zu nutzen aktivieren Sie es bitte. Kontrollzentrum --> Erweiterungen --> Plugins --> System - Template custom.css."
