--- a/language/en-GB/en-GB.plg_system_customcss.sys.ini
+++ b/language/en-GB/en-GB.plg_system_customcss.sys.ini
@@ -1,7 +1,6 @@
-; Joomla Template custom.css (JCCSS)
-; Copyright (C) 2013 - 2015 Tobias Zulauf (jah-tz.de). All rights reserved.
-; License GNU General Public License, http://www.gnu.org/copyleft/gpl.html
-; Note : All ini files need to be saved as UTF-8
+; Custom CSS Plugin
+; Copyright (C) 2013 - 2020 Tobias Zulauf (jah-tz.de). All rights reserved.
+; License GNU General Public License, https://www.gnu.org/copyleft/gpl.html
 
 PLG_SYSTEM_CUSTOMCSS="System - Add a custom.css"
 PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="This plugin checks whether a custom.css (or custom.min.css) file exists at /templates/"templatename"/css or /administrator/templates/"templatename"/css. If present, it will be loaded to the site.<br>With a custom.css you can overwrite the template css files.<br>This file will not be touched by an update.<br>To use the plugin please activate it. Control Pannel --> Extensions --> Plugins --> System - Template custom.css."
