add crowdin support and inital sync

--- a/language/de-DE/de-DE.plg_system_customcss.sys.ini
+++ b/language/de-DE/de-DE.plg_system_customcss.sys.ini
@@ -3,4 +3,5 @@
 ; License GNU General Public License, https://www.gnu.org/copyleft/gpl.html
 
 PLG_SYSTEM_CUSTOMCSS="System - Template custom.css"
-PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="Dieses Plugin prüft ob eine custom.css (oder custom.min.css) Datei hier /templates/"templatename"/css oder hier /administrator/templates/"templatename"/css vorhanden ist. Sollte es eine Datei gefunden werden wird diese nach allen anderen CSS Dateien geladen. <br>- Mit einer custom.css können alle im Template definierten CSS Klassen überschreiben werden.<br>- Diese Dateien werden bei einem Update nicht verändert.<br>- Um das Plugin zu nutzen aktivieren Sie es bitte. Kontrollzentrum --> Erweiterungen --> Plugins --> System - Template custom.css."
+PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="Dieses Plugin prüft ob eine custom.css (oder custom.min.css) Datei hier /templates/\"templatename\"/css oder hier /administrator/templates/\"templatename\"/css vorhanden ist. Sollte es eine Datei gefunden werden wird diese nach allen anderen CSS Dateien geladen. <br>- Mit einer custom.css können alle im Template definierten CSS Klassen überschreiben werden.<br>- Diese Dateien werden bei einem Update nicht verändert.<br>- Um das Plugin zu nutzen aktivieren Sie es bitte. Kontrollzentrum --> Erweiterungen --> Plugins --> System - Template custom.css."
+
