--- a/language/fr-FR/fr-FR.plg_system_customcss.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_customcss.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License, https://www.gnu.org/copyleft/gpl.html
 
 PLG_SYSTEM_CUSTOMCSS="Système - Ajouter un fichier CSS personnalisé"
-PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="Ce plugin vérifie si un fichier custom.css (ou custom.min.css) existe dans /templates/\"nomdutemplate\"/css ou /administrator/templates/\"nomdutemplate\"/css. Si présent, il sera chargé sur le site.<br>- Avec un CSS personnalisé vous pouvez écraser les fichiers css du template.<br>- Ce fichier ne sera pas touché par une mise à jour.<br>- Pour utiliser le plugin, veuillez l'activer. Panneau de configuration --> Extensions --> Plugins --> Système - Template custom.css."
+PLG_SYSTEM_CUSTOMCSS_XML_DESCRIPTION="Ce plugin vérifie si un fichier custom.css (ou custom.min.css) existe dans /templates/\"templatename\"/css ou /administrator/templates/\"templatename\"/css. Si présent, il sera chargé sur le site.<br>- Avec un CSS personnalisé vous pouvez écraser les fichiers css du template.<br>- Ce fichier ne sera pas touché par une mise à jour.<br>- Pour utiliser le plugin, veuillez l'activer. Panneau de configuration --> Extensions --> Plugins --> Système - Template custom.css."
 
